2006-08-09  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	Added switchToTimeline() method.
	Don't seek to values lower than 0.
	* pitivi/timeline.py:
	Add default sources behaviours in compositions.
	Added setDefaultSource() and getDefaultSource() methods.
	* pitivi/ui/complexinterface.py:
	pixelToNs should return a long (to cope with 2**64 values).
	* pitivi/ui/complexlayer.py:
	Don't expand audio tracks at startup.
	* pitivi/ui/ruler.py:
	Allow seeking on the ruler.
	* pitivi/ui/sourcefactories.py:
	Use the source thumbnail as the icon pixbuf when doing drag and drop.
	* pitivi/ui/timelineobjects.py:
	Switch to Timeline in the playground if we drop something in it.
	* pitivi/ui/viewer.py:
	Use bilinear scaling method with videoscale.
	Use videosink pad to figure out caps modifications.

2006-08-08  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/viewer.py:
	Only set the XID of the viewer window, on the video sink, once it is
	realized.

2006-07-12  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/elementsettingsdialog.glade:
	* pitivi/ui/encodingdialog.glade:
	* pitivi/ui/exportsettingswidget.glade:
	* pitivi/ui/projectsettings.glade:
	Removed whitespaces in front of punctuation in dialogbox.
	Fixes #346585.

2006-06-19  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	* pitivi/Makefile.am:
	* pitivi/elements/Makefile.am:
	* pitivi/elements/__init__.py:
	New directory for python gstreamer elements.
	* pitivi/elements/singledecodebin.py:
	New queue-less, single stream, decodebin-like bin for use in timelines.
	This makes seeking/scrubbing snappier.
	Also uses less memory.
	* pitivi/timeline.py:
	Use new SingleDecodeBin element.
	* pitivi/ui/viewer.py:
	Make own debug similarto gst debug.
	Don't seek on position change if it wasn't caused by the user.

2006-05-23  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Back to development cycle

=== release 0.10.1 ===

2006-05-23  Edward Hervey  <edward@fluendo.com>

	* RELEASE: